Update package.json to allow 'revealation' added to PATH

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "Reveal.js",
     "PDF generation"
   ],
+  "bin": {
+    "revealation": "./revealation.js" 
+  }
   "author": {
     "name": "Katie Miller",
     "email": "katie@codemiller.com",
