--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "revealation",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Reveal.js slide crawler to generate slide PDFs",
   "keywords": [
     "Reveal.js",
@@ -20,13 +20,14 @@
     "type": "git",
     "url": "http://github.com/codemiller/revealation"
   },
+  "scripts": {
+    "preinstall": "npm i -g casper@0.0.1 phantomjs@1.9.7-15"
+  },
   "engines": {
     "node": ">= 0.10.0",
     "npm": ">= 1.0.0"
   },
   "dependencies": {
-    "phantomjs": "~1.9.7-15",
-    "casper": "~0.1.1",
     "spooky": "~0.2.4",
     "pdfkit": "~0.6.3",
     "minimist": "~1.1.0",
