--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
-    "spooky": "~0.2.4",
-    "pdfkit": "~0.6.3",
+    "async": "^0.9.0",
+    "casperjs": "^1.1.0-beta3",
+    "image-size": "~0.3.2",
     "minimist": "~1.1.0",
-    "image-size": "~0.3.2"
+    "pdfkit": "~0.6.3",
+    "spooky": "~0.2.4",
+    "yargs": "^1.3.1"
   },
   "main": "revealation.js"
 }
