--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "presentation slides"
   ],
   "bin": {
-    "revealation": "revealation.js" 
+    "revealation": "./bin/revealation.js"
   },
   "author": {
     "name": "Katie Miller",
@@ -19,9 +19,6 @@
   "repository": {
     "type": "git",
     "url": "http://github.com/codemiller/revealation"
-  },
-  "scripts": {
-    "preinstall": "npm i -g casper@~0.0.1 phantomjs@~1.9.7-15"
   },
   "engines": {
     "node": ">= 0.10.0",
@@ -36,5 +33,5 @@
     "spooky": "~0.2.4",
     "yargs": "^1.3.1"
   },
-  "main": "revealation.js"
+  "main": "index.js"
 }
